# astesia_drone_sim

./: .gitattributes  .gitignore  README.md  ai_usage.md
drone_bringup/: CMakeLists.txt  package.xml
drone_bringup/config/: parameter_reference.yaml
drone_bringup/launch/: full.launch.py  multi_drone.launch.py  no_planner.launch.py
drone_bringup/rviz/: drone.rviz
drone_bringup/scripts/: auto_eval.py  ladrc_autotune.py  live_monitor.py  plot_bag.py  record_and_analyze.sh  trajectory_generator.py  waypoint_sender.py
drone_common/: CMakeLists.txt  README.md  package.xml
drone_common/include/drone_common/: common.hpp  drone_common.hpp  frames.hpp  math.hpp  mixer.hpp  noise.hpp  obstacle.hpp  voxel.hpp
drone_common/test/: test_common.cpp
drone_controller/: CMakeLists.txt  package.xml
drone_controller/config/: controller.yaml
drone_controller/include/drone_controller/: controller.hpp  ladrc.hpp
drone_controller/src/: controller_node.cpp  placeholder_node.cpp
drone_dynamics/: CMakeLists.txt  package.xml
drone_dynamics/config/: dynamics.yaml
drone_dynamics/include/drone_dynamics/: dynamics.hpp
drone_dynamics/src/: dynamics_node.cpp  placeholder_node.cpp
drone_map/: CMakeLists.txt  package.xml
drone_map/config/: map.yaml
drone_map/src/: map_node.cpp  placeholder_node.cpp
drone_planner/: CMakeLists.txt  package.xml
drone_planner/config/: planner.yaml
drone_planner/include/drone_planner/: astar.hpp  astar3d.hpp  grid.hpp  perception.hpp
drone_planner/src/: placeholder_node.cpp  planner_node.cpp
report/: README.md  make_experiment_figures.py  report.md  report.tex  verification_guide.html
report/bags/: .gitkeep
report/figures/: .gitkeep  square_metrics.csv
