<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_common</name>
  <version>0.0.0</version>
  <description>Shared headers for asteesia_drone_sim: mixer matrix, frame conventions, math helpers, obstacle struct.</description>
  <maintainer email="astesia@example.com">astesia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>